Update cafe/dessert menu labels

--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
           </ul>
         </li>
         <li class="has_sub">
-          <a href="#section2">카페·디저트</a>
+          <a href="#section2">카페 찾기</a>
           <ul class="sub_menu">
-            <li class="sub-label">무드</li>
-            <li><a href="#">조용한·카공하기 좋은</a></li>
-            <li><a href="#">뷰 좋은·인생 샷</a></li>
-            <li><a href="#">편한 좌석·눕눕 가능</a></li>
+            <li class="sub-label">나 혼자</li>
+            <li><a href="#">조용히 힐링</a></li>
+            <li><a href="#">작업·공부</a></li>
+            <li class="sub-label">함께</li>            
+            <li><a href="#">아이와</a></li>
+            <li><a href="#">반려동물과</a></li>
+            <li><a href="#">데이트</a></li>
             <li class="sub-label">특화</li>
-            <li><a href="#">웰컴 키즈·펫</a></li>
-            <li><a href="#">비건·락토프리 옵션</a></li>
+            <li><a href="#">비건·락토프리</a></li>
           </ul>
         </li>
         <li><a href="#section3">이용방법</a></li>
@@ -96,13 +98,15 @@
         <li>
           <span>카페·디저트</span>
           <ul class="depth2">
-            <li class="sub-label">무드</li>
-            <li><a href="#">조용한·카공하기 좋은</a></li>
-            <li><a href="#">뷰 좋은·인생 샷</a></li>
-            <li><a href="#">편한 좌석·눕눕 가능</a></li>
+            <li class="sub-label">나 혼자</li>
+            <li><a href="#">조용히 힐링</a></li>
+            <li><a href="#">작업·공부</a></li>
+            <li class="sub-label">함께</li>            
+            <li><a href="#">아이와</a></li>
+            <li><a href="#">반려동물과</a></li>
+            <li><a href="#">데이트</a></li>
             <li class="sub-label">특화</li>
-            <li><a href="#">웰컴 키즈·펫</a></li>
-            <li><a href="#">비건·락토프리 옵션</a></li>
+            <li><a href="#">비건·락토프리</a></li>
           </ul>
         </li>
         <li>
