--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nibble — 야금야금 찾아가는 나만의 아지트</title>
   <meta name="description" content="혼자여도 맛있게, 나답게. Nibble이 당신의 취향에 맞는 맛집을 찾아드립니다.">
+  <!-- Open Graph (링크 썸네일) -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Nibble — 야금야금 찾아가는 나만의 아지트">
+  <meta property="og:description" content="혼자여도 맛있게, 나답게. Nibble이 당신의 취향에 맞는 맛집을 찾아드립니다.">
+  <meta property="og:image" content="https://nibble-project.netlify.app/img/og-thumbnail.jpg">
+  <meta property="og:url" content="https://nibble-project.netlify.app/">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/gombab3.png" type="image/png">
   <!-- Material Icons -->
