--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nibble — 야금야금 찾아가는 나만의 아지트</title>
-  <meta name="description" content="혼자여도 맛있게, 나답게. Nibble이 당신의 취향에 맞는 맛집을 찾아드립니다.">
   <!-- Open Graph (링크 썸네일) -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Nibble — 야금야금 찾아가는 나만의 아지트">
-  <meta property="og:description" content="혼자여도 맛있게, 나답게. Nibble이 당신의 취향에 맞는 맛집을 찾아드립니다.">
+  <meta property="og:description" content="Nibble이 당신의 취향에 맞는 맛집을 찾아드립니다.">
   <meta property="og:image" content="https://nibble-project.netlify.app/img/og-thumbnail.jpg">
   <meta property="og:url" content="https://nibble-project.netlify.app/">
   <link rel="stylesheet" href="css/style.css">
@@ -313,7 +312,7 @@
     <div class="rel">
       <div class="tit_wrap ani_item">
         <span class="badge">
-          <span class="emoji">✨</span>
+          <span class="badge_icon"><img src="img/local_spot_hover.png" alt=""></span>
           Mood Matching
         </span>
         <h2 class="tit">
@@ -722,7 +721,7 @@
     <div class="rel">
       <div class="tit_wrap ani_item">
         <span class="badge">
-          <span class="emoji">✨</span>
+          <span class="badge_icon"><img src="img/howit.png" alt=""></span>
           How It Works
         </span>
         <h2 class="tit">
